# copper

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  log.txt
src/: common_parsing.rs  component.rs  drawable_component.rs  drawing.rs  geometry.rs  group.rs  helpers.rs  lib.rs  library.rs  main.rs  main_lib.rs  main_window.rs  resource_manager.rs  schema.rs  shape.rs  visual_helpers.rs
src/component/: geometry.rs  mod.rs
src/drawables/: group_drawable.rs  mod.rs  shape_drawable.rs  text_drawable.rs
src/drawables/loaders/: circle.rs  line.rs  mod.rs  pin.rs  polygon.rs  rectangle.rs  text.rs
src/drawing/: buffers.rs  color.rs  mod.rs  vertex.rs  view_state.rs
src/geometry/: mod.rs
src/lib/: geometry.rs  main.rs
src/lib/drawing/: buffers.rs  component_drawer.rs  gfx_machinery.rs  mod.rs  schema_drawer.rs  vertex.rs  view_state.rs  visual_helpers.rs
src/lib/drawing/drawables/: group_drawable.rs  mod.rs  shape_drawable.rs  text_drawable.rs
src/lib/drawing/drawables/component/: component_drawable.rs  mod.rs
src/lib/drawing/drawables/loaders/: arc.rs  circle.rs  line.rs  mod.rs  pin.rs  polygon.rs  rectangle.rs  text.rs
src/lib/drawing/drawables/schema/: component_drawable.rs  component_instance_drawable.rs  mod.rs  wire_drawable.rs
src/lib/drawing/schema/: drawable_component.rs  drawable_component_instance.rs  drawable_wire.rs  mod.rs
src/lib/drawing/shaders/: render.glslf  render.glslv  shape.glslf  shape.glslv
src/lib/geometry/: mod.rs  schema_elements.rs
src/lib/loading/: component_libraries_loader.rs  mod.rs  schema_loader.rs
src/lib/manipulation/: library.rs  mod.rs
src/lib/parsing/: common.rs  mod.rs
src/lib/parsing/component/: mod.rs
src/lib/parsing/kicad/: component_library.rs  mod.rs  schema.rs
src/lib/parsing/schema_file/: mod.rs
src/lib/state/: event.rs  mod.rs
src/lib/state/component_libraries/: component_library.rs  mod.rs
src/lib/state/schema/: component.rs  component_instance.rs  mod.rs  view_state.rs
src/lib/utils/: geometry.rs  mod.rs  traits.rs
src/lib/viewing/: component_viewer.rs  item_group.rs  mod.rs  schema_viewer.rs  view_state.rs
src/schema/: drawable_component.rs  drawable_wire.rs  mod.rs
src/schema_file/: mod.rs
src/shaders/: dashed_shape.glslf  render.glslf  shape.glslf  shape.glslv
test_data/: kicad.lib  kicad.sch
tests/: parsing.rs
