[package]
name = "schema_parser"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>", "Noah Huesser <yatekii@yatekii.ch>"]

[lib]
name = "copper"
path = "src/lib/main.rs"

[[bin]]
name = "schema_renderer"
path = "src/bin/main.rs"

[dependencies]
derivative = "*"

nom = "*"
gfx = "*"
gfx_window_glutin = "*"
gfx_device_gl = "*"
gfx_glyph = "*"
glutin = "*"

lyon = "*"

nalgebra = "*"
ncollide2d = "*"

lyon_tessellation = "*"
lyon_path = "*"
lyon_core = "*"

log = "*"
env_logger = "*"

gdk = "*"
gfx_core = "*"
gfx_gl = "*"

relm = "*"
relm-attributes = "*"
relm-derive = "*"

epoxy = "*"
shared_library = "*"


[dependencies.gtk]
version = "*"
features = ["v3_16"]

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]