[package]
name = "schema_parser"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>", "Noah Huesser <yatekii@yatekii.ch>"]
autobins = false

[lib]
name = "copper"
path = "src/lib/main.rs"

[[bin]]
name = "component_editor"
path = "src/bin/component_editor.rs"

[[bin]]
name = "schema_editor"
path = "src/bin/schema_editor.rs"

[dependencies]
derivative = "*"

nom = "4.0"
gfx = "*"
gfx_window_glutin = "*"
gfx_device_gl = "*"
gfx_glyph = "*"
glutin = "*"

lyon = "0.11"

nalgebra = "*"
ncollide2d = "*"

lyon_tessellation = "*"
lyon_path = "*"
lyon_core = "*"

log = "*"
env_logger = "*"

gdk = "*"
gfx_core = "*"
gfx_gl = "*"

relm = "*"
relm-attributes = "*"
relm-derive = "*"

epoxy = "*"
shared_library = "*"

bitflags = "*"

uuid = { version = "0.6.5", features = ["v4"] }

owning_ref = "0.3"

[dependencies.gtk]
version = "*"
features = ["v3_22"]

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]